# linear-algebra-lib

./: .gitignore  CMakeLists.txt  LICENSE
src/c/: main.c  matrix.c  vector.c
src/include/: matrix.h  vector.h
